--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 }
 
 header{
-    padding-top:2rem;
+    padding-top:4rem;
     display:flex;
     flex-direction:column;
     align-items:center;
@@ -19,7 +19,49 @@ header{
 }
 
 header img{
-    height:80px;
-    width:80px;
-    
+    height:100px;
+    width:100px;
+}
+
+#button_1{
+    margin-top:2.5rem;
+    color: white;
+    background-color: hsl(171, 66%, 44%);
+    padding:15px 40px;
+    border-radius:30px;
+    border:none;
+    border-bottom: 2px solid hsl(172, 75%, 25%);
+    font-family: "Bai Jamjuree", sans-serif;
+    font-weight: 600;
+    box-shadow: 0px 1px 5px hsl(171, 74%, 41%);;
+}
+
+#button_2{
+    margin-top:2.5rem;
+    margin-left:10px;
+    color: white;
+    background-color: hsl(233, 100%, 69%);
+    padding:15px 40px;
+    border-radius:30px;
+    border:none;
+    border-bottom:2px solid hsl(233, 78%, 51%);
+    font-family: "Bai Jamjuree", sans-serif;
+    font-weight: 600;
+    box-shadow: 0px  1px 5px hsl(233, 78%, 51%);
+}
+
+header h1{
+    font-size:2.5rem;
+    padding-top:3rem;
+    color:hsl(210, 10%, 33%);
+    font-weight: 600;
+}
+
+header p{
+    padding-top:15px;
+    font-size:18px;
+    color:hsl(201, 11%, 66%);
+    font-weight: 400;
+    text-align:center;
+    line-height:1.5;
 }
