--- a/style.css
+++ b/style.css
@@ -91,3 +91,11 @@ header p{
     text-align:center;
     line-height:1.5;
 }
+
+.features {
+   display:flex;
+}
+
+.features img{
+   margin-left:-30px;
+}
