--- a/style.css
+++ b/style.css
@@ -144,4 +144,13 @@ header p{
     text-align:center;
     line-height:1.7;
     padding: 1rem;
+    padding-bottom:4rem;
+}
+
+.image{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    margin-top: 2rem;
+    margin-right:20px;
 }
