--- a/style.css
+++ b/style.css
@@ -195,5 +195,32 @@ header p{
 
 .image_cont{
     display:flex;
+
+}
+
+
+.foot{
+    padding-top:4rem;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    font-family: "Bai Jamjuree", sans-serif;
+}
+
+
+.foot p:first-child{
     
+    font-size:2.5rem;
+    padding-top:3rem;
+    color:hsl(210, 10%, 33%);
+    font-weight: 600;
+}
+
+.foot p:last-child{
+    padding-top:15px;
+    font-size:18px;
+    color:hsl(201, 11%, 66%);
+    font-weight: 400;
+    text-align:center;
+    line-height:1.5;
 }
