--- a/style.css
+++ b/style.css
@@ -195,8 +195,14 @@ header p{
 
 .image_cont{
     display:flex;
-
+    gap:5rem;
+    justify-content: center;
 }
+
+/* .image_cont img{
+    height:45px;
+    width:140px;
+} */
 
 
 .foot{
@@ -208,15 +214,7 @@ header p{
 }
 
 
-.foot p:first-child{
-    
-    font-size:2.5rem;
-    padding-top:3rem;
-    color:hsl(210, 10%, 33%);
-    font-weight: 600;
-}
-
-.foot p:last-child{
+.foot p{
     padding-top:15px;
     font-size:18px;
     color:hsl(201, 11%, 66%);
@@ -224,3 +222,20 @@ header p{
     text-align:center;
     line-height:1.5;
 }
+
+.foot p:first-child{
+    
+    font-size:2rem;
+    padding-top:3rem;
+    color:hsl(210, 10%, 33%);
+    font-weight: 600;
+}
+
+/* .foot p:last-child{
+    padding-top:15px;
+    font-size:18px;
+    color:hsl(201, 11%, 66%);
+    font-weight: 400;
+    text-align:center;
+    line-height:1.5;
+} */
