--- a/style.css
+++ b/style.css
@@ -36,11 +36,19 @@ header img{
     box-shadow: 0px 1px 5px hsl(171, 74%, 41%);;
 }
 
+
+#button_1:hover{
+    cursor: pointer;
+    background-color: hsl(171, 56%, 59%);
+    border-bottom: 2px solid hsl(172, 72%, 41%);
+}
+
+
 #button_2{
     margin-top:2.5rem;
     margin-left:10px;
     color: white;
-    background-color: hsl(233, 100%, 69%);
+    background-color: hsl(233, 80%, 60%);
     padding:15px 40px;
     border-radius:30px;
     border:none;
@@ -48,6 +56,13 @@ header img{
     font-family: "Bai Jamjuree", sans-serif;
     font-weight: 600;
     box-shadow: 0px  1px 5px hsl(233, 78%, 51%);
+}
+
+
+#button_2:hover{
+    cursor: pointer;
+    background-color: hsl(233, 100%, 72%);
+    border-bottom: 2px solid hsl(233, 78%, 51%);
 }
 
 header h1{
@@ -226,6 +241,8 @@ header p{
     display:flex;
     gap:5rem;
     justify-content: center;
+    align-items: center;
+    padding-top:6rem;
 }
 
 /* .image_cont img{
@@ -233,9 +250,27 @@ header p{
     width:140px;
 } */
 
+ #vector{
+   height:25px;
+}
+#hp{
+    width:120px;
+}
+#microsoft{
+    height:30px;
+    width:130px;
+}
+#ibm{
+    height:45px;
+    width:120px;
+}
+#google{
+    height:40px;
+    width:140px;
+}
 
 .foot{
-    padding-top:4rem;
+    padding-top:6rem;
     display:flex;
     flex-direction:column;
     align-items:center;
@@ -289,11 +324,12 @@ footer .socials{
     align-items:center;
     gap:2rem;
 }
-/* .foot p:last-child{
-    padding-top:15px;
-    font-size:18px;
-    color:hsl(201, 11%, 66%);
-    font-weight: 400;
-    text-align:center;
-    line-height:1.5;
-} */
+
+footer .content span:hover{
+    cursor:pointer;
+    color:hsl(171, 66%, 44%);
+}
+
+footer .socials img:hover{
+    cursor:pointer;
+}    
